# BiHPR

./: .gitignore  README.md  pyproject.toml
BiHPR/: BiHPR_MCP_large.py  BiHPR_single_test.py  Cluster.py  Weight.py  __init__.py
examples/: BiHPR_usage_demo.ipynb
